--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -14,6 +14,7 @@
     position: relative;
     gap: 1em;
     cursor: pointer;
+    margin-bottom: 10rem;
     
 }
 .carousel::-webkit-scrollbar{
